[tool.poetry]
name = "opentelemetry-instrumentation-django-stomp"
version = "0.4.0"
description = "Opentelemetry instrumentor for django-stomp package"
authors = ["Juntos Somos Mais <labs@juntossomosmais.com.br>"]
readme = "README.md"
license = "MIT"
include = [
    "LICENSE",
]
homepage = "https://github.com/juntossomosmais/opentelemetry-instrumentation-django-stomp"
repository = "https://github.com/juntossomosmais/opentelemetry-instrumentation-django-stomp"
keywords=["django-stomp", "stomp", "django", "opentelemetry", "instrumentation"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "*"
django-stomp = "^6.0.0"
opentelemetry-sdk = "*"
opentelemetry-api = "*"
opentelemetry-instrumentation = "*"

[tool.poetry.group.dev.dependencies]
### Tests Runner
tox = "*"
trio = "*"
pytest-trio = "*"
### Pytest: Essentials
pytest = "*"
pytest-mock = "*"
pytest-django = "*"
pytest-cov = "*"
pytest-env = "*"
pytest-xdist = "*"
### Pytest: Add-ons
pytest-icdiff = "*"
pytest-clarity = "*"
### Format, lint, static type checker, among others
black = "*"
mypy = "*"
isort = "*"
flake8 = "*"
flake8-bugbear = "*"
autoflake = "*"
pre-commit = "*"
types-requests = "*"

[tool.black]
line-length = 120
target_version = ["py310"]
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
